Added missing break.

--- a/_includes/jquery.html
+++ b/_includes/jquery.html
@@ -5,6 +5,7 @@
 			case 27:
 				window.location = '#home';
 				console.log('#home');
+				break;
 			case 37:
 				$('.previous:visible').click();
 				break;
